@@ -1,0 +1,9 @@
+noinst_LTLIBRARIES = libgigeditgfx.la
+
+libgigeditgfx_la_SOURCES = \
+    builtinpix.cpp builtinpix.h \
+    black_loop.c \
+    gray_loop.c \
+    red_dot.c \
+    yellow_dot.c \
+
