@@ -1,0 +1,4 @@
+Pixbuf C files are created/updated like this:
+
+gdk-pixbuf-csource --raw -–name=red_dot_rgba red_dot.png > red_dot.c
+
